Improvements to generated metadata (#119)
Fixes #105

Includes:
 * Javadoc for the generated annotation
 * Generated annotation contains originating root element
 * Root generated elements includes all TypeConverters, Meta-annotations, other root elements
 * Generated annotation includes the fully computed settings (including the defaults)
 * Generated annotation includes all the sources it used to compute the final settings